trying to get score to add up and show

--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
 
 			<div class="choices">
 				</div>
-
+		
 				<button id="start">Start</button>
+
+				<span id="count"></span>
 </div>
 
 	</body>
