--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 				</div>
 		
 				<button id="start">Start</button>
-
+				<button id="next">Next</button>
 				<span id="count"></span>
 </div>
 
