rough draft, fixed score issue

--- a/index.html
+++ b/index.html
@@ -17,13 +17,16 @@
 
 		<div class="questions"></div>
 
-			<div class="choices">
-				</div>
+			<ul class="choices">
+				<li></li>
+				</ul>
 		
 				<button id="start">Start</button>
 				<button id="next">Next</button>
 				<span id="count"></span>
+				<span id="score"></span>
 </div>
+
 
 	</body>
 	<!--______________________________________________________END APP-->
